fixing the page width on mobile devices

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -13,9 +13,8 @@ html {
     padding-right: 15px;
     margin-left: auto;
     margin-right: auto;
-    width:  750px;
+    max-width:  750px;
 }
-
 
 :root {
     --background-color : hsl(225, 18%, 90%);
